--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-places:9.2.0'
+    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 }
 repositories {
     mavenCentral()
