--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.huparidiary"
+        applicationId "com.mibtech.huparidiary"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
